--- a/PROJETO-LTP/style.css
+++ b/PROJETO-LTP/style.css
@@ -3,3 +3,33 @@ body{
       align-items: center;
     justify-content: center;
 }
+.container{
+  background-color: #000;
+}
+p{
+  max-width: 480px;
+  text-align: center;
+  margin: 60px auto;
+  font-family:'Courier New', Courier, monospace;
+  color: #000000;
+}
+p:after{
+content: '|';
+margin-left: 5px;
+opacity: 1;
+animation: pisca .7s infinite;
+}
+#spinner{
+  align-items: center;
+  align-content: center;
+}
+/* Animação aplicada ao content referente a classe *.titulo-principal* resultando num efeito de cursor piscando. */
+
+@keyframes pisca{
+  0%, 100%{
+      opacity: 1;
+  }
+  50%{
+      opacity: 0;
+  }
+}
