--- a/PROJETO-LTP/style.css
+++ b/PROJETO-LTP/style.css
@@ -62,7 +62,18 @@ img{
   margin-left: 0%;
   left: 10px;
 }
-
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  align-items: left;
+  justify-content: left;
+  text-align: left;
+}
+.nav{
+  background-color: #000000;
+  width: 70px;
+}
 /* Animação aplicada ao content referente a classe *.titulo-principal* resultando num efeito de cursor piscando. */
 
 @keyframes pisca{
